tests/baselines/reference/instanceQuery-0001.errors.txt
instanceQuery-0001.ts(7,5): error TS2322: Type 'ArrayBuffer' is not assignable to type 'instanceof ArrayBufferConstructor & ArrayBuffer'.
  Object type ArrayBuffer has no constructor declared via 'instanceof' therefore is not assignable to constructor typeof ArrayBufferConstructor
instanceQuery-0001.ts(18,5): error TS2322: Type 'ArrayBuffer' is not assignable to type 'instanceof ArrayBufferConstructor & ArrayBuffer'.
instanceQuery-0001.ts(31,18): error TS2345: Argument of type 'ArrayBuffer' is not assignable to parameter of type 'instanceof ArrayBufferConstructor & ArrayBuffer'.
instanceQuery-0001.ts(36,18): error TS2345: Argument of type 'ArrayBuffer' is not assignable to parameter of type 'instanceof ArrayBufferConstructor & ArrayBuffer'.


==== instanceQuery-0001.ts (4 errors) ====
    namespace instof000 {}
    
    namespace instof0002 {
        declare let a: ArrayBuffer;
        declare let b: instanceof ArrayBuffer;
        a = b; // should not Error
        b = a; // should Error
        ~
!!! error TS2322: Type 'ArrayBuffer' is not assignable to type 'instanceof ArrayBufferConstructor & ArrayBuffer'.
!!! error TS2322:   Object type ArrayBuffer has no constructor declared via 'instanceof' therefore is not assignable to constructor typeof ArrayBufferConstructor
    
    }
    namespace instof0003 {
        let a: ArrayBuffer | undefined;
        let b = new ArrayBuffer(0);
        a = b; // should not error
    }
    namespace instof0003 {
        declare let a: ArrayBuffer;
        let b = new ArrayBuffer(0) as instanceof ArrayBuffer;
        b = a ; // should Error
        ~
!!! error TS2322: Type 'ArrayBuffer' is not assignable to type 'instanceof ArrayBufferConstructor & ArrayBuffer'.
    }
    namespace instof005 {
        declare let a: instanceof ArrayBuffer;
        let b = new ArrayBuffer(0) as instanceof ArrayBuffer;
        b = a ; // should not Error
        a = b ; // should not Error
    }
    
    namespace instof006 {
    
        declare function safeDataView(buffer: instanceof ArrayBuffer): DataView;
    
        safeDataView(new ArrayBuffer(0)); // should error
                     ~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'ArrayBuffer' is not assignable to parameter of type 'instanceof ArrayBufferConstructor & ArrayBuffer'.
    
        safeDataView(new ArrayBuffer(0) as instanceof ArrayBuffer); // should not error
    
        declare let a: ArrayBuffer;
        safeDataView(a); // should error
                     ~
!!! error TS2345: Argument of type 'ArrayBuffer' is not assignable to parameter of type 'instanceof ArrayBufferConstructor & ArrayBuffer'.
    
        declare let b: instanceof ArrayBuffer;
        safeDataView(b); // should not error
    
    }